# emotion-light-sound

./: .gitignore  README.md
client/: .env.example  README.md  pyproject.toml
client/src/: README.md  __main__.py
client/src/arduino_led/: README.md  arduino_led.ino  pyproject.toml  send_led.py  test_led.py
client/src/client_web_server/: main.py  pyproject.toml  test_send_server.py
client/src/client_web_server/frontend/: index.html
client/src/client_web_server/frontend/js/: main.js
client/src/opencv_face/: face_detection.py  pyproject.toml
server/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
server/src/: README.md  __main__.py
server/src/cloud_server_api/: README.md  main.py  pyproject.toml
server/src/music_gen/: __init__.py  music_generator.py  musicgen_pipeline.py  pyproject.toml  test.py  test_generate.py
src/: README.md
