[project]
name = "client-web-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "fastapi>=0.121.3",
    "python-dotenv>=1.0.0",
    "python-socketio>=5.14.3",
    "requests>=2.31.0",
    "uvicorn>=0.38.0",
]
